--- a/style/style.css
+++ b/style/style.css
@@ -7,11 +7,16 @@
 
 body{
     display:flex;
-    justify-content: center;
+    margin:0;
+    padding-top:100px;
+    box-sizing:border-box;
+    justify-content: flex-start;
     align-items: center;
     flex-direction:column;
+    background-image: linear-gradient(180deg, #811800 608px, #ffbf5c 7%);
     background-color: #a02006   ;
     color:white;
+    height: 100vh;
     font-family: 'Courier New', Courier, monospace; 
 
 }
@@ -20,14 +25,18 @@ h1{
     font-family:Bungee_Outline;
     font-size: 4em;
     margin: 0;
+    text-shadow: 2px 2px 2px black;
     padding: 0;
+    position: relative;
     text-align: center;
+    top: 20px;
 }
 
 canvas{
     background-color: black;
     border:3px solid white;
-    border-radius: 30px
+    border-radius: 20px;
+    box-shadow: 3px 3px 4px 0px black;
 }
 
 
