--- a/style/style.css
+++ b/style/style.css
@@ -243,7 +243,7 @@ h1{
     padding: 0;
     position: absolute;
     text-align: center;
-    z-index:20;
+    z-index:22;
 }
 h2{
         font-size: 1.2rem;
@@ -266,8 +266,8 @@ h4{
 }
 
 .headline{
-font-size: 5.6rem;
-    top: -65px;
+font-size: 4.6rem;
+    top: -75px;
     
 }
 
@@ -284,6 +284,50 @@ width: 800px;
     box-shadow: 3px 3px 4px 0px black;
     justify-content: center;
 }
+
+#gameOverScreen{
+        z-index:20;
+    box-sizing:border-box;
+
+    height: 100%;
+    width:100%;
+    top:3px;
+    left:3px;
+    font-family:"Ojuju";
+    border-radius:20px;
+
+    background-color: rgba(133, 231, 35, 0.8);
+    backdrop-filter: grayscale(100%) invert(100%);
+    position:absolute;
+}
+
+.gameOver{
+     display:flex;
+     flex-direction: column;
+    justify-content:center;
+    align-items:center;
+    font-size: 2.2em;
+    line-height:3.5em;
+}
+
+.gameOver h3{
+    font-size:4.8rem;
+}
+
+.winning-BG{
+
+    background-image:url('./img/4_enemie_boss_chicken/5_dead/G27.png');
+    background-repeat:no-repeat;
+    background-size:contain;
+     transition: width 2s, height 2s, transform 2s;
+}
+
+.winning-BG .big{
+     width: 100%;
+  height: 100%;
+  transform: rotate(570deg);
+}
+
 
 canvas{
     background-color: black;
@@ -404,26 +448,21 @@ p{
     color: rgb(112, 10, 10);
     bottom: -100%;
     position:relative;
-    transition: bottom 0.5s cubic-bezier(.77,0,.18,1);
-
- 
+    transition: bottom 0.5s ease-in-out; 
    
 }
 #buttonContent.open{
     bottom:0;
    z-index:18;
+       transition: bottom 0.5s ease-in-out; 
 
 }
 #buttonContent.close{
     bottom: -100%;
+    transition: bottom 0.5s ease-in-out; 
     
 }
 
-/* .buttonContent{
-    position:absolute;
-    bottom: -100%;
-} */
- 
 .darkLayer{
     position:absolute;
     border-radius: 20px;
