--- a/style/style.css
+++ b/style/style.css
@@ -229,7 +229,7 @@ section{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     position: absolute;
 }
@@ -296,9 +296,12 @@ width: 800px;
     font-family:"Ojuju";
     border-radius:20px;
 
+    position:absolute;
+}
+
+.backdrop{
     background-color:#70231380;
     backdrop-filter: grayscale(100%) invert(100%);
-    position:absolute;
 }
 
 .gameOver{
@@ -331,15 +334,14 @@ width: 800px;
     top: 40%;
 }
 
-.winning-BG{
-
+.winningBG{
     background-image:url('./img/4_enemie_boss_chicken/5_dead/G27.png');
     background-repeat:no-repeat;
     background-size:contain;
      transition: width 2s, height 2s, transform 2s;
 }
 
-.winning-BG .big{
+.winningBG .big{
      width: 100%;
   height: 100%;
   transform: rotate(570deg);
