--- a/style/style.css
+++ b/style/style.css
@@ -295,8 +295,8 @@ width: 800px;
     left:3px;
     font-family:"Ojuju";
     border-radius:20px;
-
-    position:absolute;
+    overflow:visible;
+    position:relative;
 }
 
 .backdrop{
@@ -335,17 +335,33 @@ width: 800px;
 }
 
 .winningBG{
+    z-index: -1;
+    position: absolute;
+    width: 0%;
+    height: 0%;
+
     background-image:url('../img/4_enemie_boss_chicken/5_dead/G27.png');
     background-repeat:no-repeat;
-    background-size:contain;
+
      transition: width 2s, height 2s, transform 2s;
 }
 
-.winningBG .big{
-     width: 100%;
-  height: 100%;
-  transform: rotate(570deg);
+.winningBG.big{
+     width: 200%;
+  height: 200%;
+      background-position-x: center;
+      background-position-y: center;
+position: absolute;
+    /* bottom:40px; */
+    background-size: 560px;
+     transition: width 2s, height 2s, transform 2s;
+  transform: rotate(360deg);
 }
+
+.winningGameOverBG{
+    background-color:#81180080;
+}
+
 
 
 canvas{
@@ -528,26 +544,38 @@ position:relative;
 .replayButton:hover{
 overflow: unset;
     cursor: pointer;
-    background-size: 70px;
-    box-shadow: 1px 1px 2px 0px black;
+    /* background-size: 70px; */
+    box-shadow: 1px 1px -2px 0px black;
     width: 200px;
     right: -300px;
-}
-
-
-.replayButton::before {
-        font-size: 1.1rem;
-        font-weight:600;
-    color:#811800;
-    content: "A LA REVANCHA!";
-    position: absolute;
-    top:10px;
-    left: 85px;
 }
 
 .replayButton:active{
  background-size: 64px;
 }
+
+.replayButton.lose::before {
+        font-size: 1.1rem;
+        font-weight:600;
+    color:#811800;
+    content: "¡A LA REVANCHA!";
+    position: absolute;
+    top:10px;
+    left: 85px;
+}
+
+.replayButton.win::before {
+        font-size: 1.1rem;
+        font-weight:600;
+    color:#811800;
+    content: "¿OTRO POLLO?";
+    position: absolute;
+    top:10px;
+    left: 85px;
+}
+
+
+
 
 #sound,#play{
     display: flex;
@@ -659,7 +687,7 @@ overflow: unset;
 }
 
 .fondo{
-    height: 60%;
+    height: 680px;
     z-index: 0;
     width:100vw;
     position:absolute;
@@ -668,6 +696,8 @@ overflow: unset;
     background-size:1000px;
     background-position-y:bottom;
     background-repeat:repeat-x;
+     outline: 1px solid #fdf08f;
+  outline-offset: -1px;
 
 }
 
